Update positioning in CSS for better layout and modify checkbox label text for clarity

--- a/teste_de_risco.html
+++ b/teste_de_risco.html
@@ -68,7 +68,7 @@
             <div class="qa-item qa-special">
               <label class="checkbox">
                 <input type="checkbox" id="q3a">
-                <span><strong>3A.</strong> Alternativa incompatível com a pergunta 3. Marcar esta opção <strong>desativa</strong> a Q3 e aplica <strong>-3 pontos</strong>.</span>
+                <span><strong>3A.</strong> Se nunca morou com ele, marque essa opção.</span>
               </label>
               <p class="hint">Obs.: ao marcar 3A, a pergunta 3 é desabilitada automaticamente.</p>
             </div>
