tela de cadastro

--- a/ajuda.html
+++ b/ajuda.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container header-content">
       <a href="index.html" class="logo" aria-label="Página inicial Vozes Femininas">
-        <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto Vozes Femininas" />
+        <img src="logo.svg" alt="Logo do projeto Vozes Femininas" />
       </a>
       <nav class="main-nav" aria-label="Principal">
         <a href="index.html">Home</a>
@@ -20,6 +20,7 @@
         <a href="leis.html">Leis</a>
         <a href="teste_de_risco.html">Teste de Risco</a>
         <a href="contato.html">Contato</a>
+        <a href="cadastro.html">Cadastro</a>
       </nav>
     </div>
   </header>
