--- a/leis.html
+++ b/leis.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container header-content">
       <a href="index.html" class="logo">
-        <img src="https://placehold.co/200x50/8a2be2/ffffff?text=Vozes+Femininas" alt="Logo do projeto">
+        <img src="logo.svg" alt="Logo do projeto">
       </a>
 <nav class="main-nav">
   <a href="index.html" class="active">Home</a>
@@ -20,6 +20,7 @@
   <a href="leis.html">Leis</a>
   <a href="teste_de_risco.html">Teste de Risco</a>
   <a href="contato.html">Contato</a>
+  <a href="cadastro.html">Cadastro</a>
 </nav>
 
     </div>
